--- a/config/spree_storefront.yml
+++ b/config/spree_storefront.yml
@@ -1,3 +1,73 @@
+mahabub:
+  navigation:
+    - title: Bakery
+      subtitle: Categories
+      url: /t/bakery
+      items:
+        - :title: Cakes & Pastry
+          :url: /t/bakery/cakes-and-dairy
+    - title: Beverages
+      subtitle: Categories
+      url: /t/beverages
+
+suresh:
+  navigation:
+    - title: Bakery
+      subtitle: Categories
+      url: /t/bakery
+      items:
+        - :title: Cakes & Pastry
+          :url: /t/bakery/cakes-and-dairy
+#      promo_banners:
+#        - subtitle: New collection
+#          title: Summer 2019
+#          url: /t/new-collection/summer-2019
+#          image: 'meganav/promo_banner_left-first-category.jpg'
+#        - subtitle: Special Offers
+#          title: Get up to 30% off
+#          url: /t/special-offers/30-off
+#          image: 'meganav/promo_banner_right-first-category.jpg'
+    - title: Beverages
+      subtitle: Categories
+      url: /t/beverages
+#      items:
+#        - :title: Shirts
+#          :url: /t/men/shirts
+#        - :title: T-shirts
+#          :url: /t/men/t-shirts
+#        - :title: Sweaters
+#          :url: /t/men/sweaters
+#        - :title: Jackets and Coats
+#          :url: /t/men/jackets-and-coats
+#      promo_banners:
+#        - subtitle: New collection
+#          title: Summer 2019
+#          url: /t/new-collection/summer-2019
+#          image: 'meganav/promo_banner_left-second-category.jpg'
+#        - subtitle: Special Offers
+#          title: Get up to 30% off
+#          url: /t/special-offers/30-off
+#          image: 'meganav/promo_banner_right-second-category.jpg'
+#    - title: Sportswear
+#      subtitle: Categories
+#      url: /t/sportswear
+#      items:
+#        - :title: Tops
+#          :url: /t/sportswear/tops
+#        - :title: Sweatshirts
+#          :url: /t/sportswear/sweatshirts
+#        - :title: Pants
+#          :url: /t/sportswear/pants
+#      promo_banners:
+#        - subtitle: New collection
+#          title: Summer 2019
+#          url: /t/new-collection/summer-2019
+#          image: 'meganav/promo_banner_left-third-category.jpg'
+#        - subtitle: Special Offers
+#          title: Get up to 30% off
+#          url: /t/special-offers/30-off
+#          image: 'meganav/promo_banner_right-third-category.jpg'
+
 default:
   navigation:
     - title: Women
